--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicTacToe</title>
-    <link rel="stylesheet" href="css/main.css"
+    <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    
-</body>
+    <h1>TIC TAC TOE</h1>
+    <section id="board">
+        <div id="c0r0"></div>
+        <div id="c1r0"></div>
+        <div id="c2r0"></div>
+
+        <div id="c0r1"></div>
+        <div id="c1r1"></div>
+        <div id="c2r1"></div>
+
+        <div id="c0r2"></div>
+        <div id="c1r2"></div>
+        <div id="c2r2"></div>
+    </section>
+    <button id="btn">Reset</button>
+    </body>
 </html>
