--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicTacToe</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
+    <a class="background" href="https://imgur.com/6CaswQS" title="a dusty black chalkboard"></a>
 </head>
 <body>
-    <h1>TIC TAC TOE</h1>
+    <h1 id="title">TIC TAC TOE</h1>
     <section id="board">
         <div id="c0r0"></div>
         <div id="c1r0"></div>
@@ -22,6 +24,6 @@
         <div id="c1r2"></div>
         <div id="c2r2"></div>
     </section>
-    <button id="btn">Reset</button>
+    <button id="btn">Play Again</button>
     </body>
 </html>
